(docs) [AP]: Add project plan, match metrics guide, and update CLAUDE.md for laptop migration